# BIN_OCR

./: AUTHORS  BIN_OCR.desktop  README.md
binary_viewer/: Cargo.toml  README.md  build.rs
binary_viewer/src/: actions.rs  binarisation.rs  conv_toimg.rs  convertpgm.rs  lib.rs  load_image.rs  main.rs  neural_network.rs  read_csv.rs  resizing.rs  solution.rs
binary_viewer/src/TEST/: label_test.csv
binary_viewer/src/digits/: 12.pgm  4.pgm
client/: Cargo.toml  build.rs  result_src_img_BINimg1.txt
client-server/: BIN_OCR.desktop
client-server/client/src/: lib.rs  main.rs  rust_interface
client-server/server/: Cargo.toml
client-server/server/src/: actions_server.rs  find_imgposition.rs  lib.rs
client-server/server/src/TEST/: datatest_28x28.csv
client/src/: actions_client.rs  engine.rs  load_image.rs  main.rs
server/src/: conv_toimg.rs  cut.rs  engine.rs  find_imgposition.rs  main.rs  midsized_letter.rs  read_csv.rs  resizing.rs
test_ocr/src/: clear.rs  convertpgm.rs  find_edge.rs  find_imgposition.rs  lib.rs  main.rs  make_dataset.rs  neural_network.rs  solution.rs
test_ocr/src/TRAINING/: label_train.csv
test_ocr/src/digits/: 3.pgm  6.pgm
test_ocr/src/images/: BINimg1.pgm  BINimg2.pgm
