[package]
name = "BIN_OCR"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "BIN_OCR"
path = "src/main.rs"

[dependencies]
image = "0.25"
csv = "1.3"
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "=1.3.3"
tokio = { version = "1", features = ["full"] }
iced = { version = "0.14", features = ["image", "svg","canvas"] }
rfd = "0.14"

[profile.release]
opt-level = 3

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"